[tool.black]
line-length = 125
target-version = ['py36', 'py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "vahti"
version = "1.0.0"
description = ""
readme = "README.md"
authors = [
    "Felipe Morato <me@fmorato.com>",
]
homepage = "https://github.com/fmorato/vahti/"
documentation = ""
license = "MIT"
keywords = ["webcrawler", "parser", "scrapper"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.scripts]
vahti = "vahti:cli.main"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.21"
beautifulsoup4 = "^4.7"
rope = "^0.14.0"

[tool.poetry.dev-dependencies]
# pre-commit = "^1.10"
coverage = "^4.5"
flake8 = "^3.5"
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
